@@ -28,7 +28,7 @@ echo "<ul class=\"sf-menu\">";
 						echo anchor('setup/seatreserve', 'Seat Reservation', array('title' => 'Seat Reservation'));
 					echo "</li>";
 					echo "<li>";
-						echo anchor('setup/sc', 'Study center', array('title' => 'Study center'));
+						echo anchor('setup/viewsc', 'Study center', array('title' => 'Study center'));
 					echo "</li>";
 					echo "<li>";
 						echo anchor('setup/dispdepartment', 'Department', array('title' => 'Department'));
@@ -48,6 +48,9 @@ echo "<ul class=\"sf-menu\">";
 					echo "<li>";
 						echo anchor('setup/displayfees', 'Program Fees', array('title' => 'Program Fees'));
 					echo "</li>";
+					echo "<li>";
+						echo anchor('setup/creditrules', 'Credit Rules', array('title' => 'Credit Rules'));
+					echo "</li>";
 				echo "</ul>";
 			echo "</li>";
 			echo "<li>";
@@ -64,6 +67,9 @@ echo "<ul class=\"sf-menu\">";
 					echo "</li>";
 					echo "<li>";
 						echo anchor('map/subjectteacher', 'Map Subject and Paper with Teacher', array('title' => 'Map Subject and Paper with Teacher'));
+					echo "</li>";
+					echo "<li>";
+						echo anchor('map/prerequisite', 'Map Subject and Paper with Prerequisite', array('title' => 'Map Subject and Paper with Prerequisite'));
 					echo "</li>";
 					echo "<li>";
 
@@ -104,7 +110,21 @@ echo "<ul class=\"sf-menu\">";
 				echo "<a href=" . ">Archives</a>";
 				echo "<ul>";
 					echo "<li>";
-						echo anchor('archive/feesmastera', 'Fees Master', array('title' => 'Fees Master'));
+						echo anchor('archive/feesmastera', 'Fees Master Archive', array('title' => 'Fees Master Archive'));
+					echo "</li>";
+					echo "<li>";
+						echo anchor('archive/prgsubja', 'Program Subject Archive', array('title' => 'Program Subject Archive'));
+					echo "</li>";
+					echo "<li>";
+						echo anchor('archive/subpapera', 'Subject Paper Archive', array('title' => 'Subject Paper Archive'));
+					echo "</li>";
+				echo "</ul>";
+			echo "</li>";
+			echo "<li>";
+				echo "<a href=" . ">Audit Trails</a>";
+				echo "<ul>";
+					echo "<li>";
+						echo anchor('audittr/logdetail', 'Log Deatails', array('title' => 'Log Details'));
 					echo "</li>";
 				echo "</ul>";
 			echo "</li>";
